--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,6 @@ header .main-menu {
   left: 2.25rem;
 }
 
-.main-menu:first-child:hover .dropdown-menu {
-  display: block;
-}
-
 .main-menu .dropdown-menu li {
   padding: 0.45rem;
   text-transform: none;
@@ -258,8 +254,16 @@ section.banner .container {
   position: relative;
 }
 
-section.banner .img-chair {
-  background: url('../images/black_chair.png') no-repeat center/ cover;
+.img-chair ul{
+    list-style: none;
+}
+
+.img-chair li{
+    display: none;
+}
+
+.img-chair .visible{
+    display: inline-block;
 }
 
 section.banner .col {
@@ -325,6 +329,7 @@ section.offer .col {
   width: 30%;
   height: 15.5em;
   margin: 0 1.66%;
+  overflow: hidden;
 }
 
 .chair01 {
@@ -341,7 +346,17 @@ section.offer .col {
   height: 3.125em;
   width: 100%;
   padding-bottom: 0.75em;
+  background-color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0.5);
+  transition: 2s linear;
+  -webkit-transition: 2s linear;
+  -moz-transition: 2s linear;
+  -o-transition: margin-right 2s linear;
+
+}
+
+section.offer .col:hover .offer-box {
+  right: -400px;
 }
 
 .offer-box p {
