--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@
 header, footer, section {
   display: block;
   width: 100%;
-  padding: 0.75rem;
+  padding: 0.75rem 0;
 }
 
 .container {
@@ -186,7 +186,7 @@ header {
   text-transform: uppercase;
 }
 
-span {
+span.slogan {
   color: #24C8AD;
   font-weight: bold;
 }
@@ -200,20 +200,27 @@ header a {
 }
 
 header .main-menu {
-  display: inline-block;
   padding: 0 1.5rem;
-  position: relative;
   font-weight: 600;
+  display: inline-block;
+  position: relative;
 }
 
 .main-menu .dropdown-menu {
-  background: #000;
   display: none;
   position: absolute;
   height: 6.25rem;
   z-index: 1;
+}
+
+.dropdown-menu ul {
   margin-top: 1.25rem;
-  ;
+  display: block;
+  background: #000;
+}
+
+.main-menu:first-of-type:hover .dropdown-menu {
+  display: block;
 }
 
 .main-menu .dropdown-menu::after {
@@ -222,13 +229,14 @@ header .main-menu {
   border-right: 1rem solid transparent;
   border-bottom: 1rem solid #000;
   position: absolute;
-  top: -0.5rem;
+  top: 0.6rem;
   left: 2.25rem;
 }
 
 .main-menu .dropdown-menu li {
   padding: 0.45rem;
   text-transform: none;
+  display: block;
 }
 
 
@@ -565,10 +573,246 @@ sup {
 }
 
 
+/* CALCULATOR */
+
+.application {
+  background-color: #f9f9f9;
+  padding: 1.875rem 0;
+}
+
+.application h2 {
+  color: #777777;
+  font-size: 1.5rem;
+}
+
+.application .align_right {
+  text-align: right;
+}
+
+.inline {
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
+  margin: 0 1.66%;
+}
+
+.form {
+  margin-top: 3rem;
+}
+
+.dropdown-list {
+  border: 1px solid #24C8AD;
+  width: 100%;
+  height: 3.75rem;
+  background: #fff;
+  margin-top: 1rem;
+  padding: 0.75rem;
+  position: relative;
+}
+
+.list-label {
+  font-size: 1.5rem;
+  color: #e2e2e2;
+}
+
+.chair-type-chosen {
+  color: #24C8AD;
+}
+
+.checkbox {
+  position: relative;
+  padding: 1rem 1rem 1rem 0;
+}
+
+.checkbox input {
+  display: block;
+  opacity: 0;
+  height: 75%;
+  position: absolute;
+  width: 75%;
+  cursor: pointer;
+}
+
+.checkbox label {
+  display: block;
+  padding-left: 4rem;
+  position: relative;
+  font-size: 1.75rem;
+  color: #cecece;
+  line-height: 120%;
+  padding-top: 0.6rem;
+  cursor: pointer;
+}
+
+.checkbox label::before, .checkbox label::after {
+  border: 1px solid #24C8AD;
+  content: "";
+  display: block;
+  left: 0;
+  height: 3rem;
+  position: absolute;
+  width: 3rem;
+  top: 0;
+}
+
+.checkbox label::after {
+  background: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20preserveAspectRatio%3D%22xMidYMid%22%20width%3D%2233.875%22%20height%3D%2233%22%20viewBox%3D%220%200%2033.875%2033%22%3E%0A%20%20%3Cpath%20d%3D%22M9.470%2C15.209%20L14.061%2C24.104%20C14.061%2C24.104%2021.522%2C6.026%2033.287%2C-0.000%20C33.000%2C4.304%2031.852%2C8.035%2033.861%2C12.626%20C28.696%2C13.774%2018.078%2C26.687%2014.635%2C33.000%20C9.756%2C26.974%204.017%2C22.382%20-0.000%2C20.948%20L9.470%2C15.209%20Z%22%20fill%3D%22%2327c7ab%22/%3E%0A%3C/svg%3E%0A") no-repeat center;
+  border: 0;
+  display: none;
+}
+
+.checkbox input:checked+label::after {
+  display: block;
+}
+
+.image-part img {
+  margin-top: 30%;
+  margin-left: 13%;
+}
+
+.image-part {
+  width: 30%;
+  margin: 0 1.66%;
+}
+
+.application .green-line {
+  background: #24C8AD;
+  width: 12.5rem;
+  height: 0.375rem;
+  display: inline-block;
+  margin: 0.3rem 0 0.3rem 0;
+}
+
+.summary-part {
+  width: 30%;
+  margin: 0 1.66%;
+}
+
+.summary-panel {
+  background: #fff;
+  width: 100%;
+  height: 13.5rem;
+  padding: 0.6rem;
+  margin-top: 3rem;
+}
+
+.summary-panel span {
+  margin-top: 0.6rem;
+  font-size: 1.5rem;
+  display: block;
+}
+
+.application .button-order {
+  display: block;
+  height: 4rem;
+  width: 100%;
+  background: #24C8AD;
+  font-size: 1.75rem;
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 0.5rem;
+  margin-top: 3rem;
+  padding-top: 1rem;
+}
+
+.panel-left {
+  display: inline-block;
+  width: 65%;
+  vertical-align: top;
+  padding-bottom: 0.6rem;
+  border-bottom: 1px solid #e7e7e7;
+  height: 10rem;
+}
+
+.panel-right {
+  display: inline-block;
+  width: 30%;
+  border-left: 1px solid #e7e7e7;
+  text-align: right;
+  vertical-align: top;
+  padding-bottom: 0.6rem;
+  border-bottom: 1px solid #e7e7e7;
+  height: 10rem;
+}
+
+.panel-left h4, .panel-right h4 {
+  color: #24C8AD;
+  font-size: 1.5rem;
+}
+
+.panel-left span {
+  color: #5b5a5a;
+}
+
+.panel-right span {
+  color: #24C8AD;
+}
+
+.sum-label {
+  display: inline-block;
+  width: 60%;
+  margin-top: 0.6rem;
+  font-size: 22px;
+  color: #5b5a5a;
+}
+
+.sum {
+  display: inline-block;
+  width: 35%;
+  text-align: right;
+  margin-top: 0.6rem;
+  font-size: 1.5rem;
+  color: #24C8AD;
+}
+
+.list-arrow {
+  width: 0;
+  height: 0;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid transparent;
+  border-top: 1rem solid #24C8AD;
+  display: block;
+  position: absolute;
+  right: 1.25rem;
+  top: 1.25rem;
+  cursor: pointer;
+}
+
+.list-panel {
+  background-color: white;
+  border: 1px solid #ccc;
+  width: 100%;
+  list-style: none;
+  margin: 0;
+  left: 0;
+  z-index: 2;
+  position: absolute;
+  top: 3rem;
+  display: none;
+}
+
+.list-panel li {
+  cursor: pointer;
+  color: #585858;
+  padding: 0.6rem;
+}
+
+.list-panel li:hover {
+  background: #24C8AD;
+}
+
+.type {
+  height: 2rem;
+}
+
+
 /* CONTACT FORM SECTION */
 
 .contact-form {
-  width: 60%;
+  width: 63.32%;
+  margin: 0 1.66%;
 }
 
 section.contact h2 {
@@ -586,8 +830,8 @@ form[name=contact] {
 }
 
 form[name=contact] ::placeholder {
-  color: #CDCDCD;
-  font-size: 2rem;
+  color: #e2e2e2;
+  font-size: 1.5rem;
   padding-top: 1rem;
   padding-left: 1rem;
   font-family: 'Raleway', sans-serif;
@@ -596,7 +840,7 @@ form[name=contact] ::placeholder {
 input {
   width: 100%;
   margin: 1rem 0;
-  height: 5rem;
+  height: 3.75rem;
   border: 1px solid #24C8AD;
   font-family: 'Raleway', sans-serif;
   font-size: 2em;
@@ -608,21 +852,17 @@ textarea {
   height: 12.5rem;
   border: 1px solid #24C8AD;
   font-family: 'Raleway', sans-serif;
-  font-size: 2em;
+  font-size: 1.5rem;
   color: #777777;
 }
 
 .agreement {
-  width: 35%;
-  margin-left: 5%;
+  width: 29.66%;
+  margin: 0 1.66%;
   padding-top: 5%;
 }
 
-.agreement img {
-  padding-left: 10%;
-}
-
-.checkbox {
+.checkbox2 {
   border: 1px solid #24C8AD;
   height: 3.125rem;
   width: 3.125rem;
@@ -634,7 +874,7 @@ textarea {
 }
 
 section:last-of-type p:last-of-type {
-  color: #CDCDCD;
+  color: #cecece;
   font-size: 1.35rem;
   margin-top: 2rem;
   padding-left: 4rem;
@@ -643,7 +883,7 @@ section:last-of-type p:last-of-type {
 .button-send {
   display: block;
   height: 4rem;
-  width: 90%;
+  width: 100%;
   background: #24C8AD;
   font-size: 2rem;
   color: #fff;
